--- a/Lab2/instagram/index.html
+++ b/Lab2/instagram/index.html
@@ -26,7 +26,7 @@
                     <input class="inputForm" placeholder="Имя пользователя, номер мобильного телефона или электронный адрес">
                 </div>
                 <div style="margin-top:10px" class="inputDiv">
-                    <input class="inputForm" placeholder="Пароль">
+                    <input type="password" class="inputForm" placeholder="Пароль">
                 </div>
                 
                 <button id="logInBtn">Войти</button>
